<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddUpdateEmpresa">
    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="30dp">
        <EditText
            android:id="@+id/edit_text_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_first_name"
            android:padding="@dimen/view_padding"
            android:textSize="@dimen/add_edit_textsize"/>
        <EditText
            android:id="@+id/edit_text_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_last_name"
            android:padding="@dimen/view_padding"
            android:textSize="@dimen/add_edit_textsize"/>
        <EditText
            android:id="@+id/edit_text_hire_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/view_padding"
            android:hint="@string/add_date"
            android:gravity="left" />

        <EditText
            android:id="@+id/edit_text_number"
            android:hint="@string/number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left" />

        <EditText
            android:id="@+id/edit_text_dept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_dept"
            />
            <TextView
                android:id="@+id/text_view_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textSize="@dimen/add_edit_textsize"
                android:paddingRight="25dp"/>
            <CheckBox android:id="@+id/checkbox_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_c"
                android:onClick="onCheckboxClicked"/>
            <CheckBox android:id="@+id/checkbox_m"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_m"
                android:onClick="onCheckboxClicked"/>
            <CheckBox android:id="@+id/checkbox_f"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_f"
                android:onClick="onCheckboxClicked"/>
        <Button
            android:id="@+id/button_add_update_employee"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/button_padding"
            android:text="@string/add_employee"
            android:layout_gravity="center"/>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>